--- a/app/src/main/res/layout/fragment_advanced_search.xml
+++ b/app/src/main/res/layout/fragment_advanced_search.xml
@@ -41,8 +41,6 @@
         android:layout_marginTop="16dp"
         android:minWidth="48dp"
         android:minHeight="48dp"
-        android:textOff="Menu"
-        android:textOn="API"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/radioGroup" />
@@ -75,11 +73,12 @@
         android:id="@+id/spinner_sort"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:entries="@array/sort_options"
         android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:entries="@array/sort_options"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnSearch"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnSearch" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvAdvancedSearchResults"
