--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -1,28 +1,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="16dp">
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:background="@color/material_dynamic_primary40">
 
     <ImageView
         android:id="@+id/ivCategoryImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:adjustViewBounds="true"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        android:layout_gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/tvCategoryName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:textSize="16sp" />
+        android:layout_marginTop="8dp"
+        android:textSize="20sp"
+        android:layout_gravity="center_horizontal" />
 
     <ImageView
         android:id="@+id/ivMore"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginStart="16dp"
         android:src="@drawable/dots"
-        android:contentDescription="Details" />
+        android:contentDescription="Details"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"/>
 </LinearLayout>
